# predictpath-ui

./: .gitignore  index.html  tailwind.config.ts
NiRu-predictpath-tools/: README.md
NiRu-predictpath-tools/Tool1/: debug_enricher.py  debug_ingest.py  pyproject.toml  requirements.txt  test.md
NiRu-predictpath-tools/Tool1/data/samples/: lanl_small.txt
NiRu-predictpath-tools/Tool1/src/: main.py
NiRu-predictpath-tools/Tool1/src/core/: config.py  exceptions.py  schema.py
NiRu-predictpath-tools/Tool1/src/ingestion/: auth_lanl.py  base.py  net_cicids.py
NiRu-predictpath-tools/Tool1/src/processing/: enricher.py  normalizer.py  pipeline.py
NiRu-predictpath-tools/Tool1/src/storage/: writer.py
NiRu-predictpath-tools/Tool2/: pyproject.toml  requirements.txt
NiRu-predictpath-tools/Tool2/src/: domain.py  engine.py  ingest.py  main.py
NiRu-predictpath-tools/Tool3/: pyproject.toml  requirements.txt
NiRu-predictpath-tools/Tool3/src/: domain.py  knowledge_base.py  main.py  predictor.py
NiRu-predictpath-tools/Tool4/: pyproject.toml
NiRu-predictpath-tools/Tool4/src/: domain.py  engine.py  knowledge_base.py  main.py
NiRu-predictpath-tools/Tool5/: pyproject.toml
NiRu-predictpath-tools/Tool5/src/: adapters.py  domain.py  engine.py  logger.py  main.py  policy.py
NiRu-predictpath-tools/Tool5/tests/: test_adapters.py  test_audit.py  test_policy.py
NiRu-predictpath-tools/Tool6/: .gitignore  pyproject.toml  read_config.py
NiRu-predictpath-tools/Tool6/src/: database.py  learning.py  ledger.py  main.py
NiRu-predictpath-tools/Tool6/tests/: test_ledger_tamper.py
NiRu-predictpath-tools/predictpath-ui/: README.md  index.html
NiRu-predictpath-tools/predictpath-ui/backend/: main.py
NiRu-predictpath-tools/predictpath-ui/src/: App.tsx  index.css
NiRu-predictpath-tools/predictpath-ui/venv_backend/: pyvenv.cfg
src/: App.tsx
src/pages/: Index.tsx
src/stores/: pipelineStore.ts
src/types/: pipeline.ts
(+30 files in other folders)
