[project]
name = "predictpath-tool1"
version = "0.1.0"
description = "Unified Event Intelligence Engine for PredictPath AI"
requires-python = ">=3.11"
dependencies = [
    "polars>=0.20.0",
    "pydantic>=2.5.0",
    "pyarrow>=14.0.0",
    "duckdb>=0.9.2",
    "scikit-learn>=1.3.2",
    "sentence-transformers>=2.2.2",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "python-dateutil>=2.8.2",
    "pydantic-settings>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "mypy>=1.7.0"
]

[tool.setuptools]
packages = ["src"]
