[project]
name = "tool2-behavioral-engine"
version = "0.1.0"
description = "Strategic Behavioral Path Reconstruction Engine for PredictPath AI"
requires-python = ">=3.11"
dependencies = [
    "polars>=0.20.0",
    "networkx>=3.2.1",
    "pydantic>=2.5.0",
    "rich>=13.7.0",
    "numpy>=1.26.0",
]

[tool.setuptools]
packages = ["src"]
